# fbp-lambda-v2

./: .gitignore  README.md  buildall.sh  built-template.yaml  creates3bucket.sh  min.local.yaml  min.yaml  notify-sms-policy.json  package-lock.json  package.json  pyrightconfig.json  sam_build_deploy_all_python.sh  samconfig.toml  sms-lambda-invoke.sh  sms-notify-config.sh  sms-templates.sh
.aws-sam/: build.toml
.debugger/debugpy-1.8.20.dist-info/: RECORD
events/: EmailForwarding.json  GetPoolConfig.json  GetPoolOpenEvent.json  addFBPUser.json  calcWeeklyResults.json  calcWeeklyResultsPython.json  event.json  fixAndValidateFBPPicks.json  getFBPEmailAndDisplayName.json  getListForEmail.json  getPickSheet.json  getSchedule.json  getScheduleSheet.json  getStandings.json  getUserStatus.json  getweeklyResults.json  queryFBPLogs.json  resetDBs.json  sendBetaTestEmail.json  sendEmail.json  sendGridSheetEmail.json  sendPickSheetEmail.json  sendReminderEmail.json  updateWeeklyResults.json  validatePicks.json
scripts/: validate_debug_config.py
src/AddOrUpdateFBPUser/src/: AddOrUpdateFBPUser.py
src/CalcWeeklyResultsPython/src/: CalcWeeklyResults.py
src/EmailForwarding/src/: EmailForwarding.py
src/FBPLib/: __init__.py  decimalDefault.py  fbpLog.py  numberToInt.py
src/FBPLib-Layer/: Makefile  pyproject.toml  requirements.txt
src/FBPLib-Layer/FBPLib/: __init__.py  decimalDefault.py  fbpLog.py
src/FBPLib-Layer/fbplib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/GetAllFBPPicksPython/src/: GetAllFBPPicks.py
src/fbplib.egg-info/: SOURCES.txt  top_level.txt
(+21 files in other folders)
